/*
 * UCF COP3330 Fall 2021 Assignment 4 Solutions
 * Copyright 2021 Duane Ortiz
 */
package baseline;

import java.util.ArrayList;

public class Inventory {
    //contains an array of items created by JSON method
    ArrayList<Item>  product;
}
